--- a/similarity_search/src/experiment.vcxproj.filters
+++ b/similarity_search/src/experiment.vcxproj.filters
@@ -4,6 +4,9 @@
     <ClCompile Include="main.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="params.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
