1. Installing code as a library. 2. A minimal example of using library in the standalone mode.

--- a/similarity_search/lshkit/CMakeLists.txt
+++ b/similarity_search/lshkit/CMakeLists.txt
@@ -21,3 +21,8 @@ endif ()
 
 #ADD_SUBDIRECTORY("tools")
 
+install(TARGETS lshkit   
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  COMPONENT library
+)
