Fixing bugs, committing release makefile version.

--- a/sample_standalone_app/makefile
+++ b/sample_standalone_app/makefile
@@ -1,6 +1,8 @@
 # Set these variables if you installed the library to a non-standard location
-NON_METRIC_SPACE_LIBRARY_INC=/home/leo/NonMetrLibDebug/include
-NON_METRIC_SPACE_LIBRARY_LIB=/home/leo/NonMetrLibDebug/lib
+#NON_METRIC_SPACE_LIBRARY=/home/leo/NonMetrLibDebug
+NON_METRIC_SPACE_LIBRARY=/home/leo/NonMetrLibRelease
+NON_METRIC_SPACE_LIBRARY_INC=$(NON_METRIC_SPACE_LIBRARY)/include
+NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/lib
 
 LIB_GSL=-lgsl -lgslcblas -llshkit
 
@@ -8,7 +10,8 @@ CXXFLAGS += -I$(NON_METRIC_SPACE_LIBRARY_INC)
 # Enable C++11
 CXXFLAGS += -std=c++11
 # Debug flags
-CXXFLAGS += -g
+#CXXFLAGS += -g
+CXXFLAGS += -g -O3
 
 BIN=test_app
 
@@ -18,6 +21,6 @@ clean:
 	rm -f *.o $(BIN)
 
 # Note -pthread: this enables threads!!!
-test_app: test_app.o data.o *.h
+test_app: test_app.o data.o *.h makefile
 	$(CXX) -o$@ test_app.o data.o -l NonMetricSpaceLib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIB_GSL) -pthread
 
