add files for the VC-project

--- a/similarity_search/src/NonMetricSpaceLib.vcxproj.filters
+++ b/similarity_search/src/NonMetricSpaceLib.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClCompile Include="method\vptree.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="distcomp_sparse_scalar_fast.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\distcomp.h">
