--- a/similarity_search/src/NonMetricSpaceLib.vcxproj
+++ b/similarity_search/src/NonMetricSpaceLib.vcxproj
@@ -226,6 +226,7 @@
     <ClCompile Include="distcomp_lp.cc" />
     <ClCompile Include="distcomp_rankcorr.cc" />
     <ClCompile Include="distcomp_scalar.cc" />
+    <ClCompile Include="distcomp_sparse_scalar_fast.cc" />
     <ClCompile Include="experimentconf.cc" />
     <ClCompile Include="global.cc" />
     <ClCompile Include="init.cc" />
